@@ -12,10 +12,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -29,17 +26,13 @@ import static java.time.LocalTime.now;
 public class KokService {
 
     private final KokRepository kokRepository;
-    private final ZimRepository zimRepository;
     private final UserRepository userRepository;
     private final RealEstateRepository realEstateRepository;
-    private final HighlightRepository highlightRepository;
     private final FurnitureOptionRepository furnitureOptionRepository;
-    private final ImpressionRepository impressionRepository;
     private final OptionRepository optionRepository;
     private final DetailOptionRepository detailOptionRepository;
     private final FileUploadUtils fileUploadUtils;
-
-
+    private final StarRepository starRepository;
 
     @Transactional
     public GetKokResponse getKoks(long userId, int page, int size) {
@@ -52,10 +45,17 @@ public class KokService {
         List<Zim> zims = user.getZims().stream().toList();
 
         int startIdx = (page - 1) * size;
+        GetKokResponse.Meta meta = calculateIndexingOfKokList(koks, page, size, startIdx);
+
         List<Kok> responseKoks = koks.stream()
                 .skip(startIdx)
                 .limit(size)
-                .collect(Collectors.toList());
+                .toList();
+
+        return GetKokResponse.of(responseKoks, meta, zims);
+    }
+
+    private GetKokResponse.Meta calculateIndexingOfKokList(List<Kok> koks, int page, int size, int startIdx) {
 
         boolean isEnd = false;
         if(startIdx + size > koks.size() - 1) {
@@ -67,34 +67,11 @@ public class KokService {
             throw new KokException(NO_MORE_KOK_DATA);
         }
 
-
-        GetKokResponse response = GetKokResponse.builder()
-                .koks(responseKoks.stream().map(kok -> GetKokResponse.Koks.builder()
-                        .kokId(kok.getKokId())
-                        .realEstateId(kok.getRealEstate().getRealEstateId())
-                        .imageUrl(Optional.ofNullable(kok.getRealEstate().getRealEstateImages())
-                                .filter(images -> !images.isEmpty())
-                                .map(images -> images.get(0).getImageUrl())
-                                .orElse(null))
-                        .address(kok.getRealEstate().getAddress())
-                        .detailAddress(kok.getRealEstate().getDetailAddress())
-                        .estateAgent(kok.getRealEstate().getAgent())
-                        .transactionType(kok.getRealEstate().getTransactionType().toString())
-                        .realEstateType(kok.getRealEstate().getRealEstateType().toString())
-                        .deposit(kok.getRealEstate().getDeposit())
-                        .price(kok.getRealEstate().getPrice())
-                        .isZimmed(zims.stream().anyMatch(zim -> zim.getRealEstate().equals(kok.getRealEstate())))
-                        .build())
-                        .collect(Collectors.toList()))
-                .meta(GetKokResponse.Meta.builder()
-                        .isEnd(isEnd)
-                        .currentPage(page)
-                        .totalPage(totalPage)
-                        .build())
+        return GetKokResponse.Meta.builder()
+                .isEnd(isEnd)
+                .currentPage(page)
+                .totalPage(totalPage)
                 .build();
-
-        return response;
-
     }
 
     public GetKokDetailResponse getKokDetail(long userId, long kokId) {
@@ -104,38 +81,17 @@ public class KokService {
         User user = userRepository.findByUserId(userId);
         Kok kok = kokRepository.findById(kokId).get();
 
-        boolean isZimmed = false;
-
-        if (zimRepository.existsByUserAndRealEstate(user, kok.getRealEstate())) {
-            isZimmed = true;
-        }
+        boolean isZimmed = judgeIsZimmedRealEstate(user, kok.getRealEstate());
 
         validateUserAndKok(user, kok);
 
-        GetKokDetailResponse response = GetKokDetailResponse.builder()
-                .kokId(kok.getKokId())
-                .imageInfo(GetKokDetailResponse.ImageInfo.builder().
-                        imageNumber(kok.getKokImages().size())
-                        .imageUrls(kok.getKokImages().stream().map(KokImage::getImageUrl).collect(Collectors.toList()))
-                        .build())
-                .address(kok.getRealEstate().getAddress())
-                .detailAddress(kok.getRealEstate().getDetailAddress())
-                .transactionType(kok.getRealEstate().getTransactionType().toString())
-                .deposit(kok.getRealEstate().getDeposit())
-                .price(kok.getRealEstate().getPrice())
-                .detail(kok.getRealEstate().getDetail())
-                .areaSize(kok.getRealEstate().getAreaSize())
-                .pyeongsu((int) kok.getRealEstate().getPyeongsu())
-                .realEstateType(kok.getRealEstate().getRealEstateType().toString())
-                .floorNum(kok.getRealEstate().getFloorNum())
-                .administrativeFee(kok.getRealEstate().getAdministrativeFee())
-                .latitude(kok.getRealEstate().getLatitude())
-                .longitude(kok.getRealEstate().getLongitude())
-                .isZimmed(isZimmed)
-                .realEstateId(kok.getRealEstate().getRealEstateId())
-                .build();
+        return GetKokDetailResponse.of(kok, isZimmed);
+    }
 
-        return response;
+    private boolean judgeIsZimmedRealEstate(User user, RealEstate realEstate) {
+        log.info("[KokService.judgeIsZimmedRealEstate]");
+
+        return user.getZims().stream().anyMatch(zim -> zim.getRealEstate().getRealEstateId() == realEstate.getRealEstateId());
     }
 
     public GetKokOuterInfoResponse getKokOuterInfo(long userId, long kokId) {
@@ -143,35 +99,11 @@ public class KokService {
         log.info("[KokService.getKokOuterInfo]");
 
         User user = userRepository.findByUserId(userId);
-        Kok kok = kokRepository.findById(kokId).get();
+        Kok kok = kokRepository.findKokWithCheckedOptionAndCheckedDetailOption(kokId);
 
         validateUserAndKok(user, kok);
 
-        GetKokOuterInfoResponse response = GetKokOuterInfoResponse.builder()
-                .hilights(kok.getCheckedHighlights()
-                        .stream()
-                        .map(CheckedHighlight::getHighlight)
-                        .map(Highlight::getTitle)
-                        .collect(Collectors.toList()))
-                .options(kok.getCheckedOptions()
-                        .stream()
-                        .filter(checkedOption -> checkedOption.getOption().getCategory().equals(OptionCategory.OUTER))
-                        .filter(checkedOption -> checkedOption.getOption().isVisible())
-                        .map(checkedOption -> GetKokOuterInfoResponse.OuterOption.builder()
-                                .option(checkedOption.getOption().getName())
-                                .orderNumber((int) checkedOption.getOption().getOrderNum())
-                                .detailOptions(kok.getCheckedDetailOptions()
-                                        .stream()
-                                        .filter(checkedDetailOption -> checkedDetailOption.getDetailOption().getOption().equals(checkedOption.getOption()))
-                                        .filter(checkedDetailOption -> checkedDetailOption.getDetailOption().isVisible())
-                                        .map(CheckedDetailOption::getDetailOption)
-                                        .map(DetailOption::getName)
-                                        .collect(Collectors.toList()))
-                                .build())
-                        .collect(Collectors.toList()))
-                .build();
-
-        return response;
+        return GetKokOuterInfoResponse.of(kok);
     }
 
     public GetKokInnerInfoResponse getKokInnerInfo(long userId, long kokId) {
@@ -179,36 +111,11 @@ public class KokService {
         log.info("[KokService.getKokInnerInfo]");
 
         User user = userRepository.findByUserId(userId);
-        Kok kok = kokRepository.findById(kokId).get();
+        Kok kok = kokRepository.findKokWithCheckedOptionAndCheckedDetailOption(kokId);
 
         validateUserAndKok(user, kok);
 
-        GetKokInnerInfoResponse response = GetKokInnerInfoResponse.builder()
-                .furnitureOptions(kok.getCheckedFurniturs()
-                        .stream()
-                        .map(CheckedFurniture::getFurnitureOption)
-                        .map(FurnitureOption::getFurnitureName)
-                        .collect(Collectors.toList()))
-                .direction(kok.getDirection())
-                .options(kok.getCheckedOptions()
-                        .stream()
-                        .filter(checkedOption -> checkedOption.getOption().getCategory().equals(OptionCategory.INNER))
-                        .filter(checkedOption -> checkedOption.getOption().isVisible())
-                        .map(checkedOption -> GetKokInnerInfoResponse.InnerOption.builder()
-                                .option(checkedOption.getOption().getName())
-                                .orderNumber((int) checkedOption.getOption().getOrderNum())
-                                .detailOptions(kok.getCheckedDetailOptions()
-                                        .stream()
-                                        .filter(checkedDetailOption -> checkedDetailOption.getDetailOption().getOption().equals(checkedOption.getOption()))
-                                        .filter(checkedDetailOption -> checkedDetailOption.getDetailOption().isVisible())
-                                        .map(CheckedDetailOption::getDetailOption)
-                                        .map(DetailOption::getName)
-                                        .collect(Collectors.toList()))
-                                .build())
-                        .collect(Collectors.toList()))
-                .build();
-
-        return response;
+        return GetKokInnerInfoResponse.of(kok);
     }
 
     public GetKokContractResponse getKokContractInfo(long userId, long kokId) {
@@ -216,61 +123,23 @@ public class KokService {
         log.info("[KokService.getKokContractInfo]");
 
         User user = userRepository.findByUserId(userId);
-        Kok kok = kokRepository.findById(kokId).get();
+        Kok kok = kokRepository.findKokWithCheckedOptionAndCheckedDetailOption(kokId);
 
         validateUserAndKok(user, kok);
 
-        List<String> contractImages = kok.getKokImages()
-                .stream()
-                .filter(kokImage -> kokImage.getCategory().equals(OptionCategory.CONTRACT.getDescription()))
-                .map(KokImage::getImageUrl)
-                .toList();
-
-        GetKokContractResponse response = GetKokContractResponse.builder()
-                .options(kok.getCheckedOptions()
-                        .stream()
-                        .filter(checkedOption -> checkedOption.getOption().getCategory().equals(OptionCategory.CONTRACT))
-                        .filter(checkedOption -> checkedOption.getOption().isVisible())
-                        .map(checkedOption -> GetKokContractResponse.ContractOptions.builder()
-                                .option(checkedOption.getOption().getName())
-                                .orderNumber((int) checkedOption.getOption().getOrderNum())
-                                .detailOptions(kok.getCheckedDetailOptions()
-                                        .stream()
-                                        .filter(checkedDetailOption -> checkedDetailOption.getDetailOption().getOption().equals(checkedOption.getOption()))
-                                        .filter(checkedDetailOption -> checkedDetailOption.getDetailOption().isVisible())
-                                        .map(CheckedDetailOption::getDetailOption)
-                                        .map(DetailOption::getName)
-                                        .collect(Collectors.toList()))
-                                .build())
-                        .collect(Collectors.toList()))
-                .imageInfo(GetKokContractResponse.ImageInfo.builder()
-                        .imageNumber(contractImages.size())
-                        .imageUrls(contractImages)
-                        .build())
-                .build();
-
-        return response;
+        return GetKokContractResponse.of(kok);
     }
 
     public GetKokReviewInfoResponse getKokReviewInfo(long userId, long kokId) {
 
-        log.info("[KokService.getKokContractInfo]");
+        log.info("[KokService.getKokReviewInfo]");
 
         User user = userRepository.findByUserId(userId);
-        Kok kok = kokRepository.findById(kokId).get();
+        Kok kok = kokRepository.findKokWithImpressionAndStar(kokId);
 
         validateUserAndKok(user, kok);
 
-        GetKokReviewInfoResponse response = GetKokReviewInfoResponse.builder()
-                .impressions(kok.getCheckedImpressions().stream().map(checkedImpression -> checkedImpression.getImpression().getImpressionTitle()).collect(Collectors.toList()))
-                .facilityStarCount(kok.getStar().getFacilityStar())
-                .infraStarCount(kok.getStar().getInfraStar())
-                .structureStarCount(kok.getStar().getStructureStar())
-                .vibeStarCount(kok.getStar().getVibeStar())
-                .reviewText(kok.getReview())
-                .build();
-
-        return response;
+        return GetKokReviewInfoResponse.of(kok);
     }
 
     public GetKokConfigInfoResponse getKokConfigInfo(long userId, Long kokId) {
@@ -291,8 +160,8 @@ public class KokService {
 
     private GetKokConfigInfoResponse makeKokConfigResponse(User user, Kok kok) {
 
-        List<String> hilightsResponse = makeHilightTitleList(user.getHighlights());
-        List<String> checkedHilightsResponse = null;
+        Set<String> hilightsResponse = makeHilightTitleList(user.getHighlights());
+        Set<String> checkedHilightsResponse = null;
         List<String> furnitureOptionsResponse = makeFurnitureNameList(furnitureOptionRepository.findAll());
         List<String> checkedFurinirureOptionsResponse = null;
         GetKokConfigInfoResponse.ReviewInfo reviewInfoResponse = null;
@@ -307,8 +176,8 @@ public class KokService {
         List<GetKokConfigInfoResponse.Option> contractOptionsResponse = makeOptionResponseList(filterOption(user.getOptions(), OptionCategory.CONTRACT), kok);
 
         if (kok != null) {
-            checkedHilightsResponse = makeHilightTitleList(kok.getCheckedHighlights().stream().map(CheckedHighlight::getHighlight).toList());
-            checkedFurinirureOptionsResponse = makeFurnitureNameList(kok.getCheckedFurniturs().stream().map(CheckedFurniture::getFurnitureOption).toList());
+            checkedHilightsResponse = makeHilightTitleList(kok.getCheckedHighlights().stream().map(CheckedHighlight::getHighlight).collect(Collectors.toSet()));
+            checkedFurinirureOptionsResponse = makeFurnitureNameList(kok.getCheckedFurnitures().stream().map(CheckedFurniture::getFurnitureOption).toList());
             reviewInfoResponse = makeReviewInfoResponseList(user, kok);
             directionResponse = kok.getDirection();
             outerKokImagesResponse = makeKokImagesUrlList(kok.getKokImages(), OptionCategory.OUTER);
@@ -318,10 +187,10 @@ public class KokService {
 
 
         GetKokConfigInfoResponse response = GetKokConfigInfoResponse.builder()
-                .hilights(hilightsResponse)
-                .checkedHilights(checkedHilightsResponse)
-                .furnitureOptions(furnitureOptionsResponse)
-                .checkedFurnitureOptions(checkedFurinirureOptionsResponse)
+                .hilights(hilightsResponse.stream().toList())
+                .checkedHilights(checkedHilightsResponse.stream().toList())
+                .furnitureOptions(furnitureOptionsResponse.stream().toList())
+                .checkedFurnitureOptions(checkedFurinirureOptionsResponse.stream().toList())
                 .reviewInfo(reviewInfoResponse)
                 .direction(directionResponse)
                 .outerImageUrls(outerKokImagesResponse)
@@ -371,7 +240,7 @@ public class KokService {
         }
     }
 
-    private List<Option> filterOption(List<Option> optionList, OptionCategory category) {
+    private List<Option> filterOption(Set<Option> optionList, OptionCategory category) {
         List<Option> filteredOptions = optionList
                 .stream()
                 .filter(option -> option.getCategory().equals(category) && option.isVisible())
@@ -407,11 +276,11 @@ public class KokService {
         return response;
     }
 
-    private static List<String> makeHilightTitleList(List<Highlight> highlights) {
-        List<String> hilightsResponse = highlights
+    private static Set<String> makeHilightTitleList(Set<Highlight> highlights) {
+        Set<String> hilightsResponse = highlights
                 .stream()
                 .map(Highlight::getTitle)
-                .toList();
+                .collect(Collectors.toSet());
         return hilightsResponse;
     }
 
@@ -424,256 +293,191 @@ public class KokService {
     }
 
     @Transactional
-    public PostKokResponse registerKok(long userId, List<MultipartFile> multipartFiles, PostKokRequest postKokRequest) {
+    public PostOrPutKokResponse createOrUpdateKok(long userId, List<MultipartFile> multipartFiles, PostOrPutKokRequest postOrPutKokRequest) {
+        log.info("KokService.postOrPutKok");
 
-        log.info("[KokService.registerKok]");
+        Kok kok = settingKok(userId, multipartFiles, postOrPutKokRequest);
 
-//        try {
+        kokRepository.save(kok);
 
-            Kok kok = new Kok();
-
-            User user = userRepository.findByUserId(userId);
-
-            RealEstate realEstate = realEstateRepository.findById(postKokRequest.getRealEstateId()).get();
-
-            List<CheckedHighlight> checkedHighlights = postKokRequest.getCheckedHighlights()
-                    .stream()
-                    .map(checkedHighlight ->
-                            CheckedHighlight.builder()
-                                    .kok(kok)
-                                    .highlight(highlightRepository.findByUserAndTitle(user, checkedHighlight))
-                                    .build())
-                    .toList();
-
-            List<CheckedFurniture> checkedFurnitures = postKokRequest.getCheckedFurnitureOptions()
-                    .stream()
-                    .map(checkedFurniture ->
-                            CheckedFurniture.builder()
-                                    .furnitureOption(furnitureOptionRepository.findByFurnitureName(checkedFurniture))
-                                    .kok(kok)
-                                    .build())
-                    .toList();
-
-            Star star = Star.builder()
-                    .facilityStar(postKokRequest.getReviewInfo().getFacilityStarCount())
-                    .infraStar(postKokRequest.getReviewInfo().getInfraStarCount())
-                    .structureStar(postKokRequest.getReviewInfo().getStructureStarCount())
-                    .vibeStar(postKokRequest.getReviewInfo().getVibeStarCount())
-                    .kok(kok)
-                    .build();
-
-            List<CheckedImpression> checkedImpressions = postKokRequest.getReviewInfo().getCheckedImpressions()
-                    .stream()
-                    .map(checkedImpression ->
-                            CheckedImpression.builder()
-                                    .impression(impressionRepository.findByUserAndImpressionTitle(user, checkedImpression))
-                                    .kok(kok)
-                                    .build())
-                    .toList();
-
-            List<PostKokRequest.Option> kokOptions = Stream.of(postKokRequest.getCheckedOuterOptions(), postKokRequest.getCheckedInnerOptions(), postKokRequest.getCheckedContractOptions())
-                    .flatMap(Collection::stream)
-                    .toList();
-
-
-            List<String> stringList = kokOptions.stream().map(option -> {
-                return (option.getCheckedDetailOptionIds().toString());
-            }).toList();
-
-            List<CheckedOption> checkedOptions = kokOptions.stream().map(kokOption -> CheckedOption.builder()
-                            .option(optionRepository.findByOptionId(kokOption.getOptionId()))
-                            .kok(kok)
-                            .build())
-                    .toList();
-
-
-            List<Long> detailOptionIds = kokOptions.stream()
-                    .flatMap(option -> option.getCheckedDetailOptionIds().stream())
-                    .collect(Collectors.toList());
-
-
-            List<CheckedDetailOption> checkedDetailOptions = detailOptionIds.stream()
-                    .map(id -> CheckedDetailOption.builder()
-                            .detailOption(detailOptionRepository.findByDetailOptionId(id))
-                            .kok(kok)
-                            .build())
-                    .toList();
-
-
-            if(multipartFiles != null && !multipartFiles.isEmpty()) {
-
-                List<KokImage> kokImages = multipartFiles.stream()
-                        .map(file -> {
-                            String url = file.getOriginalFilename();
-                            OptionCategory category = OptionCategory.OUTER;
-                            if (url.contains("OUTER")) {
-                                category = OptionCategory.OUTER;
-                            } else if (url.contains("INNER")) {
-                                category = OptionCategory.INNER;
-                            } else if (url.contains("CONTRACT")) {
-                                category = OptionCategory.CONTRACT;
-                            }
-
-                            url = fileUploadUtils.uploadFile(user.getUserId().toString() + "/" + System.currentTimeMillis(), file);
-
-
-                            return KokImage.builder()
-                                    .category(category.getDescription())
-                                    .imageUrl(url)
-                                    .kok(kok)
-                                    .option(null)
-                                    .build();
-                        }).collect(Collectors.toList());
-
-                kok.setKokImages(kokImages);
-            }
-
-            kok.setDirection(postKokRequest.getDirection());
-            kok.setReview(postKokRequest.getReviewInfo().getReviewText());
-            kok.setRealEstate(realEstate);
-            kok.setUser(user);
-            kok.setCheckedFurniturs(checkedFurnitures);
-            kok.setCheckedImpressions(checkedImpressions);
-            kok.setCheckedHighlights(checkedHighlights);
-            kok.setCheckedDetailOptions(checkedDetailOptions);
-            kok.setCheckedOptions(checkedOptions);
-            kok.setStar(star);
-
-            Long kokId = kokRepository.save(kok).getKokId();
-
-
-            return new PostKokResponse(kokId);
-
-//        } catch (Exception e) {
-//            throw new KokException(KOK_REGISTRATION_FAILURE);
-//        }
-
+        return PostOrPutKokResponse.builder()
+                .kokId(kok.getKokId())
+                .build();
     }
 
-    public Object modifyKok(long userId, List<MultipartFile> multipartFiles, PutKokRequest putKokRequest) {
-        log.info("[KokService.modifyKok]");
+    private Kok settingKok(long userId, List<MultipartFile> multipartFiles, PostOrPutKokRequest postOrPutKokRequest){
+        log.info("KokService.settingKok");
 
         User user = userRepository.findByUserId(userId);
+        Kok kok = getInitializeKok(user, postOrPutKokRequest);
 
-        Kok kok  = kokRepository.findByKokId(putKokRequest.getKokId());
-
-        if (kok == null) {
+        if(kok == null){
             throw new KokException(KOK_ID_NOT_FOUND);
         }
 
+        fillKokFieldValue(user, kok, postOrPutKokRequest);
+        handleKokImage(user, multipartFiles, kok);
+
+        return kok;
+    }
+
+    private Kok getInitializeKok(User user, PostOrPutKokRequest postOrPutKokRequest) {
+        log.info("KokService.getInitializeKok");
+
+        return (postOrPutKokRequest.getKokId() == null)
+                ? Kok.builder()
+                    .realEstate(realEstateRepository.findById(postOrPutKokRequest.getRealEstateId()).get())
+                    .user(user)
+                    .checkedHighlights(new ArrayList<>())
+                    .checkedFurnitures(new ArrayList<>())
+                    .checkedImpressions(new ArrayList<>())
+                    .checkedOptions(new LinkedHashSet<>())
+                    .checkedDetailOptions(new LinkedHashSet<>())
+                    .kokImages(new ArrayList<>())
+                    .build()
+                : clearKok(Objects.requireNonNull(kokRepository.findById(postOrPutKokRequest.getKokId()).orElse(null)));
+    }
+
+    private Kok clearKok(Kok kok) {
+        log.info("KokService.clearKok");
+
         kok.getCheckedHighlights().clear();
-        putKokRequest.getCheckedHighlights()
-                .stream()
+        kok.getCheckedFurnitures().clear();
+        kok.getCheckedImpressions().clear();
+        kok.getCheckedOptions().clear();
+        kok.getCheckedDetailOptions().clear();
+
+        if(!kok.getKokImages().isEmpty()) {
+            kok.getKokImages().forEach(kokImage -> fileUploadUtils.deleteFile(extractKeyFromUrl(kokImage.getImageUrl())));
+            kok.getKokImages().clear();
+        }
+
+        return kok;
+    }
+
+    private void fillKokFieldValue(User user, Kok kok, PostOrPutKokRequest postOrPutKokRequest) {
+        log.info("KokService.fillKokFieldValue");
+
+        kok.setDirection(postOrPutKokRequest.getDirection());
+        kok.setReview(postOrPutKokRequest.getReviewInfo().getReviewText());
+
+        Star star = Star.builder()
+                .facilityStar(postOrPutKokRequest.getReviewInfo().getFacilityStarCount())
+                .infraStar(postOrPutKokRequest.getReviewInfo().getInfraStarCount())
+                .structureStar(postOrPutKokRequest.getReviewInfo().getStructureStarCount())
+                .vibeStar(postOrPutKokRequest.getReviewInfo().getVibeStarCount())
+                .build();
+
+        starRepository.save(star);
+        kok.setStar(star);
+
+        kokRepository.save(kok);
+
+        postOrPutKokRequest.getCheckedHighlights()
                 .forEach(checkedHighlight ->
                         kok.getCheckedHighlights().add(CheckedHighlight.builder()
                                 .kok(kok)
-                                .highlight(highlightRepository.findByUserAndTitle(user, checkedHighlight))
+                                .highlight(
+                                        user.getHighlights().stream()
+                                                .filter(highlight -> highlight.getTitle().equals(checkedHighlight))
+                                                .findFirst()
+                                                .orElse(null)
+                                )
                                 .build()));
 
-
-
-        kok.getCheckedFurniturs().clear();
-        putKokRequest.getCheckedFurnitureOptions()
-                .stream()
+        List<FurnitureOption> furnitureOptionList = furnitureOptionRepository.findAll();
+        postOrPutKokRequest.getCheckedFurnitureOptions()
                 .forEach(checkedFurniture ->
-                        kok.getCheckedFurniturs().add(CheckedFurniture.builder()
-                                .furnitureOption(furnitureOptionRepository.findByFurnitureName(checkedFurniture))
+                        kok.getCheckedFurnitures().add(CheckedFurniture.builder()
+                                .furnitureOption(
+                                        furnitureOptionList.stream()
+                                                .filter(furnitureOption -> furnitureOption.getFurnitureName().equals(checkedFurniture))
+                                                .findFirst()
+                                                .orElse(null)
+                                )
                                 .kok(kok)
                                 .build()));
 
-
-        Star star = Star.builder()
-                .facilityStar(putKokRequest.getReviewInfo().getFacilityStarCount())
-                .infraStar(putKokRequest.getReviewInfo().getInfraStarCount())
-                .structureStar(putKokRequest.getReviewInfo().getStructureStarCount())
-                .vibeStar(putKokRequest.getReviewInfo().getVibeStarCount())
-                .kok(kok)
-                .build();
-
-        kok.getCheckedImpressions().clear();
-        putKokRequest.getReviewInfo().getCheckedImpressions()
-                .stream()
+        postOrPutKokRequest.getReviewInfo().getCheckedImpressions()
                 .forEach(checkedImpression ->
                         kok.getCheckedImpressions().add(CheckedImpression.builder()
-                                .impression(impressionRepository.findByUserAndImpressionTitle(user, checkedImpression))
+                                .impression(user.getImpressions().stream()
+                                        .filter(highlight -> highlight.getImpressionTitle().equals(checkedImpression))
+                                        .findFirst()
+                                        .orElse(null))
                                 .kok(kok)
                                 .build()));
 
-
-        kok.getCheckedOptions().clear();
-        List<PostKokRequest.Option> kokOptions = Stream.of(putKokRequest.getCheckedOuterOptions(), putKokRequest.getCheckedInnerOptions(), putKokRequest.getCheckedContractOptions())
+        List<PostOrPutKokRequest.Option> kokOptions = Stream.of(postOrPutKokRequest.getCheckedOuterOptions(), postOrPutKokRequest.getCheckedInnerOptions(), postOrPutKokRequest.getCheckedContractOptions())
                 .flatMap(Collection::stream)
                 .toList();
 
-
-        kok.getCheckedDetailOptions().clear();
-        List<String> stringList = kokOptions.stream().map(option -> {
-            return (option.getCheckedDetailOptionIds().toString());
-        }).toList();
-
-        kokOptions.stream().forEach(kokOption -> kok.getCheckedOptions().add(CheckedOption.builder()
-                        .option(optionRepository.findByOptionId(kokOption.getOptionId()))
-                        .kok(kok)
-                        .build()));
-
-
+        List<Option> optionList = optionRepository.findAll();
+        kokOptions.forEach(kokOption -> kok.getCheckedOptions().add(
+                CheckedOption.builder()
+                    .option(
+                        optionList.stream()
+                                .filter(option -> option.getOptionId() == kokOption.getOptionId())
+                                .findFirst()
+                                .orElse(null)
+                    )
+                    .kok(kok)
+                    .build()
+            )
+        );
 
         List<Long> detailOptionIds = kokOptions.stream()
                 .flatMap(option -> option.getCheckedDetailOptionIds().stream())
                 .toList();
 
+        List<DetailOption> detailOptionList = detailOptionRepository.findAll();
+        detailOptionIds.forEach(id -> kok.getCheckedDetailOptions().add(
+                CheckedDetailOption.builder()
+                    .detailOption(
+                            detailOptionList.stream()
+                                    .filter(detailOption -> detailOption.getDetailOptionId() == id)
+                                    .findFirst()
+                                    .orElse(null)
+                    )
+                    .kok(kok)
+                    .build()
+            )
+        );
 
-        detailOptionIds.stream()
-                .forEach(id -> kok.getCheckedDetailOptions().add(CheckedDetailOption.builder()
-                        .detailOption(detailOptionRepository.findByDetailOptionId(id))
-                        .kok(kok)
-                        .build()));
+    }
 
-
-        if(!kok.getKokImages().isEmpty()) {
-
-            kok.getKokImages().stream().forEach(kokImage -> log.info(kokImage.getImageUrl()));
-
-            kok.getKokImages().stream().forEach(kokImage -> fileUploadUtils.deleteFile(extractKeyFromUrl(kokImage.getImageUrl())));
-
-            kok.getKokImages().clear();
-        }
+    private void handleKokImage(User user, List<MultipartFile> multipartFiles, Kok kok) {
+        log.info("KokService.handleKokImage");
 
         if(multipartFiles != null && !multipartFiles.isEmpty()) {
 
-            multipartFiles.forEach(file -> {
-                String url = file.getOriginalFilename();
-                OptionCategory category = OptionCategory.OUTER;
-                if (url.contains("OUTER")) {
-                    category = OptionCategory.OUTER;
-                } else if (url.contains("INNER")) {
-                    category = OptionCategory.INNER;
-                } else if (url.contains("CONTRACT")) {
-                    category = OptionCategory.CONTRACT;
-                }
+            List<KokImage> kokImages = multipartFiles.stream()
+                    .map(file -> {
+                        String url = file.getOriginalFilename();
+                        OptionCategory category = determineCategory(url);
 
-                // 파일 업로드 및 URL 설정
-                url = fileUploadUtils.uploadFile(user.getUserId().toString() + "/" + System.currentTimeMillis(), file);
+                        url = fileUploadUtils.uploadFile(user.getUserId().toString() + "/" + System.currentTimeMillis(), file);
 
-                // 새 KokImage 객체 생성 및 추가
-                KokImage newKokImage = KokImage.builder()
-                        .category(category.getDescription())
-                        .imageUrl(url)
-                        .kok(kok)
-                        .build();
+                        return KokImage.builder()
+                                .category(category.getDescription())
+                                .imageUrl(url)
+                                .kok(kok)
+                                .option(null)
+                                .build();
+                    }).toList();
 
-                kok.getKokImages().add(newKokImage);
-            });
+            kok.setKokImages(kokImages);
         }
+    }
 
-        kok.setDirection(putKokRequest.getDirection());
-        kok.setReview(putKokRequest.getReviewInfo().getReviewText());
-        kok.setStar(star);
-
-        kokRepository.save(kok);
-
-
-        return null;
-
+    private OptionCategory determineCategory(String url) {
+        if (url.contains("OUTER")) {
+            return OptionCategory.OUTER;
+        } else if (url.contains("INNER")) {
+            return OptionCategory.INNER;
+        } else if (url.contains("CONTRACT")) {
+            return OptionCategory.CONTRACT;
+        }
+        return OptionCategory.OUTER;
     }
 }
